Always hated the markup in the message props :-P

--- a/message.properties
+++ b/message.properties
@@ -114,7 +114,7 @@ forgot.password.int.h1.title=Forgotten your password?
 # File: jsps/about/ways-to-listen.jsp
 #
 ways.to.listen.title=Free Music Streaming on Tablets, Mobile, Computer & TV
-ways.to.listen.para.intro=You can include tags like <strong class="text-wrap">this</strong> or <span class="text-wrap">tablet</span>.
+ways.to.listen.para.intro=All tags should be {0}passed{1} though the {2}message{3}. For duplicated tags, re-use {4}params{3}.
 ways.to.listen.para.other.block=For paragraphs with anchors in them simply {0}Pass the anchor through the message{1} you can then add {2}another{1} using the same param for the anchor ending. This helps for ease of editing and translating.
 
 
